Beef up and de-flake UpdateLoadState test

This CL changes the test to:
 - Use the default timer to push load state updates, which should
   deflake the test. This is accomplished using a WebContentsDelegate.
 - Tests the actual LoadState, not just the host.

The test was currently flaking due to the update + ACK refactor which
wasn't compatible with the test.

Bug: 830991
Change-Id: I4d788e7a7388617af39f0981bd84fc7d1da6a87c
Reviewed-on: https://chromium-review.googlesource.com/1009287
Reviewed-by: Matt Menke <mmenke@chromium.org>
Reviewed-by: Avi Drissman <avi@chromium.org>
Commit-Queue: Charlie Harrison <csharrison@chromium.org>
Cr-Commit-Position: refs/heads/master@{#551084}
Former-commit-id: a36f6418ab7f721d0ded77f45eed892026a048d8